# cg-rasteriser

./: .gitignore  CMakeLists.txt  COMS30115-rasteriser.sln  COMS30115-rasteriser.vcxproj  COMS30115-rasteriser.vcxproj.filters  COMS30115-raytracer.sln  COMS30115-raytracer.vcxproj  COMS30115-raytracer.vcxproj.filters  Makefile  README
Resources/: colours.mtl  textured.mtl
Source/: Camera.cpp  Camera.h  Face.cpp  Face.h  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  SDLauxiliary.cpp  SDLauxiliary.h  Scene.cpp  Scene.h  Triangle.cpp  Triangle.h  Utilities.cpp  Utilities.h  rasteriser.cpp
src/: Camera.h  Light.h  Material.cpp  Model.cpp  SDLauxiliary.cpp  Scene.cpp  rasteriser.cpp
